--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     </div>
   </div>
-  <script src="controller/script.js"></script>
+  <script src="src/index.js"></script>
 </body>
 
 </html>
